--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,14 @@
 # in the templates via {{ site.myvariable }}.
 
 title: FloppyMio0 
-email: your-email@example.com
+email: sunyiqing@stu.scu.edu.cn 
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hi! This is FloppyMio0. I like football⚽️, music🎹, literature critics🤬, philosophy🤔 & a lot more interesting stuff!!
+  Feel free to contact me if you are also a fan of philosophy⚣ or CCP explainer❤️ 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "miro0o.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: mir0sun 
+github_username:  Miro0o
 
 # Build settings
 theme: minima
