--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: FloppyMio0 
+title: SloppyMio0 
 email: sunyiqing@stu.scu.edu.cn 
 description: >- # this means to ignore newlines until "baseurl:"
-  Hi! This is FloppyMio0. I like football⚽️, music🎹, literature critics🤬, philosophy🤔 & a lot more interesting stuff!!
+  Hi! This is SloppyMio0. I like football⚽️, music🎹, literature critics🤬, philosophy🤔 & a lot more interesting stuff!!
   Feel free to contact me if you are also a fan of philosophy⚣ or CCP explainer❤️ 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "miro0o.github.io" # the base hostname & protocol for your site, e.g. http://example.com
