--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,11 @@ twitter_username: mir0sun
 github_username:  Miro0o
 
 # Build settings
-theme: minima
+# theme: minima
+remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
   - jekyll-feed
+#  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
