--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ github_username:  Miro0o
 remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
   - jekyll-feed
-#  - jekyll-remote-theme
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
