--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ github_username:  Miro0o
 
 # Build settings
 # theme: minima
+markdown: kramdown
 remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
   - jekyll-feed
