--- a/_config.yml
+++ b/_config.yml
@@ -28,12 +28,12 @@ twitter_username: mir0sun
 github_username:  Miro0o
 
 # Build settings
-# theme: minima
+theme: jekyll-theme-leap-day
 markdown: kramdown
-remote_theme: pages-themes/leap-day@v0.2.0
+# remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
+    #  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
