--- a/_config.yml
+++ b/_config.yml
@@ -18,22 +18,21 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: SloppyMio0 
-email: sunyiqing@stu.scu.edu.cn 
+title: Your awesome title
+email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Hi! This is SloppyMio0.  
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "miro0o.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: mir0sun 
-github_username:  Miro0o
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jekyllrb
+github_username:  jekyll
 
 # Build settings
-# theme: jekyll-theme-leap-day
-markdown: kramdown
-remote_theme: pages-themes/leap-day@v0.2.0
+theme: minima
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
