--- a/_config.yml
+++ b/_config.yml
@@ -25,20 +25,26 @@ logo: "/images/site-logo.jpeg" # path of site logo, e.g. "/assets/images/logo.pn
 date_format: "%B %-d, %Y"
 read_time: true
 words_per_minute: 200
+twitter:
+  username: mir0sun # site's Twitter username
+
+# Some third services...
 mathjax:
   enable: true
   combo: "tex-mml-chtml"
   tags: "ams"
+
 google_fonts:
   - name: "Source Sans Pro"
     weights: "400,400i,700,700i"
   - name: "Lora"
     weights: "400,400i,700,700i"
 google_analytics: # Google Analytics id, e.g. "UA-NNNNNNNN-N"
-disqus:
-  shortname: comments-micro # Disqus shortname, e.g. "my_disqus_shortname"
-twitter:
-  username: mir0sun # site's Twitter username
+
+# disqus:
+  # shortname: comments-micro # Disqus shortname, e.g. "my_disqus_shortname"
+giscus:
+  enable: true
 
 # Liquid
 liquid:
@@ -106,7 +112,7 @@ defaults:
 # Site Author
 author:
   name: Mir0 Son
-  picture: /images/miro-son-photo.jpeg
+  picture: /images/miro-son-photo.JPG
   email:
   twitter: mir0sun
   links:
@@ -148,3 +154,7 @@ footer_links:
     # icon: fas fa-rss-square
     icon: fa-solid fa-square-rss
     # icon: fa-solid fa-rss
+
+# Custommed Footer Scripts. This will override the default foot_scripts
+# footer_scripts
+# ...
