--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 # theme: jekyll-theme-so-simple
 remote_theme: mmistakes/so-simple-theme
-skin: "/assets/css/skin_control.scss"
+skin: "/assets/css/skins/dark.scss"
 
 # Language supports. Related configs in _data/text.yml - by liquid templating system
 # Supported Languages: English (default), German, Spanish, French, Italy, Turkish
