--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ feed:
 
 # Pagination - https://jekyllrb.com/docs/pagination/
 paginate: 10
-paginate_path: /page:num/
+paginate_path: ./page:num/
 
 # Search
 search_full_content: false
